--- a/app/src/main/res/layout/fragment_first_intro.xml
+++ b/app/src/main/res/layout/fragment_first_intro.xml
@@ -2,15 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:background="#1abc9c"
-    tools:context="com.twt.service.wenjin.ui.welcome.WelcomeActivity">
+    >
 
-<ImageView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:src="@drawable/intro_third"
-    />
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/intro_first"
+        />
 
 </LinearLayout>
