--- a/app/src/main/res/layout/home_list_item.xml
+++ b/app/src/main/res/layout/home_list_item.xml
@@ -3,10 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="4dp"
-    android:layout_marginRight="4dp"
-    app:cardUseCompatPadding="true"
-    app:cardElevation="1dp">
+    app:cardElevation="0dp"
+    app:cardUseCompatPadding="true">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -40,6 +38,7 @@
             android:id="@+id/tv_home_item_status"
             android:textSize="14sp"
             android:textColor="@color/color_text_secondary"
+
             android:typeface="sans"
             android:gravity="center_vertical"
             android:layout_width="wrap_content"
