--- a/app/src/main/res/layout/explore_list_item.xml
+++ b/app/src/main/res/layout/explore_list_item.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/cd_explore_item"
+    android:clickable="true"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="4dp"
@@ -25,13 +27,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
-        <View
-            android:id="@+id/divider"
-            android:background="@color/color_divider"
-            android:layout_width="match_parent"
-            android:layout_height="1px"
-            android:layout_below="@+id/tv_explore_item_title"
-            android:layout_marginTop="8dp"/>
+        <!--<View-->
+            <!--android:id="@+id/divider"-->
+            <!--android:background="@color/color_divider"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="1px"-->
+            <!--android:layout_below="@+id/tv_explore_item_title"-->
+            <!--android:layout_marginTop="8dp"/>-->
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/iv_explore_item_avatar"
@@ -41,7 +43,7 @@
             android:layout_marginStart="16dp"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:layout_below="@+id/divider" />
+            android:layout_below="@+id/tv_explore_item_title" />
 
         <TextView
             android:id="@+id/tv_explore_item_user"
@@ -52,7 +54,7 @@
             android:layout_height="40dp"
             android:layout_marginLeft="4dp"
             android:layout_marginStart="4dp"
-            android:layout_below="@+id/divider"
+            android:layout_below="@+id/tv_explore_item_title"
             android:layout_toRightOf="@id/iv_explore_item_avatar"
             android:layout_toEndOf="@id/iv_explore_item_avatar"
             />
@@ -69,7 +71,7 @@
             android:layout_marginStart="4dp"
             android:layout_toRightOf="@id/tv_explore_item_user"
             android:layout_toEndOf="@id/tv_explore_item_user"
-            android:layout_below="@id/divider" />
+            android:layout_below="@id/tv_explore_item_title" />
 
         <TextView
             android:id="@+id/tv_explore_item_time"
@@ -80,7 +82,7 @@
             android:layout_height="40dp"
             android:layout_alignRight="@id/tv_explore_item_title"
             android:layout_alignEnd="@id/tv_explore_item_title"
-            android:layout_below="@id/divider"/>
+            android:layout_below="@id/tv_explore_item_title"/>
 
     </RelativeLayout>
 
