--- a/app/src/main/res/layout/activity_answer_detail.xml
+++ b/app/src/main/res/layout/activity_answer_detail.xml
@@ -36,7 +36,6 @@
         android:layout_height="match_parent">
 
 
-
     <ProgressBar
         android:id="@+id/pb_answer_loading"
         android:visibility="gone"
@@ -48,14 +47,14 @@
         android:id="@+id/answer_detail_head"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
     <TextView
         android:id="@+id/tv_answer_title"
         android:textSize="20sp"
         android:textColor="@color/color_text_primary"
-
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:maxLines="2"
+        android:maxLines="3"
         android:paddingLeft="12dp"
         android:paddingRight="12dp"
         android:paddingTop="5dp"
@@ -140,7 +139,7 @@
             android:layout_below="@+id/tv_answer_signature"
             android:layout_width="match_parent"
             android:layout_height="1px"
-            android:background="@color/color_divider"
+            android:background="@color/color_divider1"
             android:layout_marginTop="6dp"
             android:layout_marginLeft="2dp"
             android:layout_marginRight="2dp"
@@ -193,20 +192,24 @@
 
 </android.support.design.widget.CoordinatorLayout>
 
-    <FrameLayout
+    <android.support.v7.widget.CardView
         android:id="@+id/fl_bottom_actions"
         android:visibility="visible"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:foreground="?android:attr/selectableItemBackground"
+        app:cardCornerRadius="5dp"
+        app:cardElevation="8dp"
         android:layout_alignParentBottom="true"
         >
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="8dp"
             android:paddingTop="8dp"
             android:orientation="horizontal"
-            android:background="@color/color_low_gray"
+            android:background="@color/md_white_1000"
             >
             <ImageView
                 android:id="@+id/iv_bottom_action_thank"
@@ -255,5 +258,5 @@
             </RelativeLayout>
 
         </LinearLayout>
-    </FrameLayout>
+    </android.support.v7.widget.CardView>
 </RelativeLayout>
