--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,7 +23,8 @@
     <color name="color_accent_dark2">#C2185B</color>
     <color name="color_text_primary">#212121</color>
     <color name="color_text_secondary">#727272</color>
-    <color name="color_divider">#B6B6B6</color>
+    <color name="color_divider">#00b6b6b6</color>
+    <color name="color_divider1">#B6B6B6</color>
     <color name="color_answer_detail_title">#cccccc</color>
 
     <color name="color_button">#99CC00</color>
@@ -34,7 +35,7 @@
     <color name="color_accent_dark">#12836D</color> <!--33CC99 -->
 
     <color name="color_low_gray">#D8D8D8</color>
-
+    <color name="color_low_gray2">#ededed</color>
 
 
     <!--<color name="activity_background">#F5F5F5</color>-->
