--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -145,7 +145,7 @@
                 android:layout_height="36dp" />
 
             <Button
-                android:visibility="invisible"
+                android:visibility="gone"
                 android:id="@+id/bt_profile_contact"
                 android:text="@string/action_contact"
                 android:textColor="@android:color/white"
@@ -157,16 +157,13 @@
 
     </RelativeLayout>
 
-
-
     <android.support.v7.widget.CardView
         app:cardElevation="1dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/ll_profile_part_two"
         android:layout_marginTop="8dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp">
+        >
 
         <LinearLayout
             android:orientation="vertical"
