--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,21 +19,29 @@
         android:layout_gravity="center_horizontal"
         android:src="@drawable/login_logo" />
 
+    <android.support.design.widget.TextInputLayout
+        android:layout_marginTop="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <EditText
         android:id="@+id/tv_login_username"
         android:layout_width="match_parent"
         android:layout_height="@dimen/login_edit_text_height"
         android:layout_marginLeft="@dimen/login_padding_left_right"
         android:layout_marginRight="@dimen/login_padding_left_right"
-        android:layout_marginTop="18dp"
-        android:background="@drawable/edit_text_background"
+        android:layout_marginTop="@dimen/login_edit_text_height"
+
         android:drawableLeft="@drawable/ic_login_account"
         android:hint="@string/login_username_hint"
         android:maxLines="1"
         android:paddingLeft="@dimen/login_padding_control"
         android:paddingRight="@dimen/login_padding_control"
         android:singleLine="true" />
-
+    </android.support.design.widget.TextInputLayout>
+    <android.support.design.widget.TextInputLayout
+        android:layout_marginTop="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <EditText
         android:id="@+id/tv_login_password"
         android:layout_width="match_parent"
@@ -41,13 +49,13 @@
         android:layout_marginLeft="@dimen/login_padding_left_right"
         android:layout_marginRight="@dimen/login_padding_left_right"
         android:layout_marginTop="@dimen/login_magin_control"
-        android:background="@drawable/edit_text_background"
+
         android:drawableLeft="@drawable/ic_login_password"
         android:hint="@string/login_password_hint"
         android:inputType="textPassword"
         android:paddingLeft="@dimen/login_padding_control"
         android:paddingRight="@dimen/login_padding_control" />
-
+    </android.support.design.widget.TextInputLayout>
     <Button
         android:id="@+id/bt_login"
         android:layout_width="match_parent"
