--- a/app/src/main/res/layout/home_list_item.xml
+++ b/app/src/main/res/layout/home_list_item.xml
@@ -3,6 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:clickable="true"
+    android:foreground="?android:attr/selectableItemBackground"
     app:cardElevation="0dp"
     app:cardUseCompatPadding="true">
 
