--- a/app/src/main/res/layout/activity_publish.xml
+++ b/app/src/main/res/layout/activity_publish.xml
@@ -25,7 +25,7 @@
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
             <EditText
                 android:id="@+id/et_publish_title"
@@ -74,11 +74,12 @@
                 android:id="@+id/et_publish_content"
                 android:hint="@string/hint_publish_content"
                 android:inputType="textMultiLine"
-                android:gravity="start"
+                android:gravity="top|left"
                 android:background="@android:color/transparent"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
