--- a/app/src/main/res/layout/question_content_header.xml
+++ b/app/src/main/res/layout/question_content_header.xml
@@ -108,6 +108,7 @@
         android:layout_marginLeft="14dp"
         android:layout_marginStart="14dp"
         android:layout_marginTop="7dp"
+        android:layout_marginBottom="7dp"
         android:background="@drawable/image_number_background"
         >
         <ImageView
@@ -205,6 +206,7 @@
         android:drawableLeft="@drawable/ic_label_focus"
         android:drawableStart="@drawable/ic_label_focus"
         android:drawablePadding="-6dp"
+        android:visibility="gone"
         />
 
 </RelativeLayout>
