--- a/app/src/main/res/layout/activity_profile_topic.xml
+++ b/app/src/main/res/layout/activity_profile_topic.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -17,5 +17,15 @@
         android:id="@+id/profile_topic_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars="vertical" />
-</LinearLayout>
+        android:layout_below="@+id/toolbar"
+        android:scrollbars="vertical"
+        android:visibility="invisible"/>
+
+    <TextView
+        android:id="@+id/tv_empty_topic"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/toolbar"
+        android:visibility="invisible"
+        android:gravity="center" />
+</RelativeLayout>
