--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -33,7 +33,8 @@
         android:gravity="top"
         android:hint="@string/hint_feedback_detail"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:padding="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginLeft="16dp"
@@ -42,4 +43,42 @@
         android:layout_marginEnd="16dp"
         android:background="@drawable/edit_text_background"/>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="填写更多信息便于与你联系（均为选填）"
+        android:padding="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginEnd="16dp"/>
+    <EditText
+        android:id="@+id/et_feedback_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginEnd="16dp"
+        android:hint="@string/hint_feedback_name"
+        android:ems="10"
+        android:inputType="textMultiLine"
+        android:background="@drawable/edit_text_background"/>
+    <EditText
+        android:id="@+id/et_feedback_email_phone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginEnd="16dp"
+        android:hint="@string/hint_feedback_email_phone"
+        android:ems="10"
+        android:inputType="textMultiLine"
+        android:background="@drawable/edit_text_background"/>
 </LinearLayout>
