修复首页悬浮按钮错误逻辑，优化效果

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -26,5 +26,7 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
+    <dimen name="floating_button_margin">16dp</dimen>
+    <dimen name="floating_button_elevation">6dp</dimen>
     <!-- Home page dimens -->
 </resources>
