--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,6 +1,6 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/color_low_gray2"
@@ -13,32 +13,26 @@
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/home_recycler_view"
-            android:scrollbars="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:choiceMode="singleChoice"
-            android:divider="@null" />
+            android:divider="@null"
+            android:scrollbars="vertical" />
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
-
-    <com.getbase.floatingactionbutton.FloatingActionButton
+    <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_fastbacktotop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="0dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginStart="10dp"
-        android:visibility="visible"
-        fab:fab_icon="@drawable/ic_action_fast_totop"
-        fab:fab_colorPressed="@color/color_drawer_item_selected_background"
-        fab:fab_colorNormal="@color/color_primary"
-        fab:fab_stroke_visible="false"
-        fab:fab_size="mini"
+        android:src="@drawable/ic_action_fast_totop"
+        android:layout_marginBottom="?attr/actionBarSize"
+        app:layout_anchor="@id/home_recycler_view"
+        app:elevation="@dimen/floating_button_elevation"
+        app:layout_anchorGravity="bottom|end"
+        app:layout_behavior="com.twt.service.wenjin.behavior.FABScrollBehavior"
+        app:fabSize="mini"
         />
 
-</RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
 
